--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -107,7 +107,7 @@ ul {
 header.main_header {
   position: absolute;
   left: 0;
-  /* z-index: 1; */
+  z-index: 1;
   width: 100%;
 }
 .top_header {
@@ -158,13 +158,12 @@ header.main_header {
   align-items: center;
   padding: 10px 0;
 }
-
 .menu_left ul li a {
   display: inline-block;
   font-size: 16px;
   font-weight: 700;
   color: #fff;
-  padding: 19px 17.5px;
+  padding: 11px 18.5px;
 }
 
 .menu_left ul li {
@@ -372,6 +371,9 @@ ul._service_list li:last-child {
 .meet_chef_cntnt {
   margin-top: 29px;
 }
+.meet_chef_cntnt.chef_text {
+  margin-left: 7px;
+}
 .meet_chef_cntnt .tittle_heading {
   text-align: left;
 }
@@ -573,3 +575,98 @@ form.contact_form {
 /* ---------------------
          about
 ------------------------ */
+.inner_bannner {
+  padding: 253px 0 194px;
+}
+.inner_bannner .home-slider-content h1 {
+  margin-bottom: 0;
+}
+.meet_chef_about {
+  background: #fcebb9;
+}
+.about_under_text p {
+  margin-bottom: 8px;
+  font-size: 16px;
+  color: #716b6d;
+}
+.restudent_text p {
+  color: #fff;
+  font-size: 26px;
+  font-weight: 400;
+  line-height: 46px;
+}
+.restudent_text h2 {
+  color: #fff;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 46px;
+}
+.restudent_text h3 {
+  margin-bottom: 12px;
+}
+.restudent_text h2 {
+  margin-bottom: 0;
+}
+.restudent_text h3 {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.restaurdent_update_image img {
+  border-radius: 60px;
+}
+
+.about_cntnt.about_under_text {
+  margin-left: 7px;
+}
+.chef_text p {
+  margin-bottom: 8px;
+}
+.chef_text p:last-child {
+  margin-bottom: 0px;
+}
+.ours h2 {
+  font-size: 46px;
+}
+/* ---------------------
+        contact us
+------------------------ */
+section.sight_food_location {
+  background-color: #fcebb9;
+}
+.location {
+  background-color: #fff;
+  padding: 30px 44px;
+  text-align: center;
+  position: relative;
+  height: 100%;
+  border-radius: 22px;
+}
+.location_img {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  right: 0;
+}
+.under_location p {
+  font-size: 18px;
+  color: #0b0708;
+  font-weight: 700;
+}
+.under_location {
+  max-width: 370px;
+  margin: auto;
+}
+.contact_form_us .custn_input input,
+.custn_input textarea {
+  width: 100%;
+  font-size: 16px;
+  color: #716b6d;
+  padding: 19px 30px;
+  border: none;
+  border-radius: 10px;
+  background: #fcebb9;
+}
