--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -224,12 +224,21 @@ header.main_header {
 .home-slider .slick-arrow {
   width: unset;
   height: unset;
+  z-index: 1;
 }
 .home-slider img.a-right {
   right: 50px;
 }
 .home-slider img.a-left {
   left: 50px;
+}
+.video_dilse_play{
+  height: 500px;
+}
+.video_dilse_play video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .about_se {
   position: relative;
