--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -188,37 +188,59 @@ header.main_header {
 }
 .home-slider-content {
   text-align: center;
-  max-width: 1170px;
-  padding: 0 15px;
+  max-width: 820px;
+  margin: auto;
+  padding: 30px;
+  background: rgb(0 0 0 / 62%);
 }
 .home-slider-content h3 {
-  font-size: 34px;
+  font-size: 22px;
   color: #fff;
-  letter-spacing: 5px;
+  letter-spacing: 4px;
   margin-bottom: 6px;
 }
 .home-slider-content h1 {
-  font-size: 61px;
+  font-size: 34px;
   color: #fff;
-  line-height: unset;
   text-transform: uppercase;
-  margin-bottom: 8px;
+  margin-bottom: 0;
+  line-height: 44px;
 }
 .home-slider-content h1 span {
   color: #eb0029;
 }
 .home-slider-content p {
-  font-size: 20px;
+  font-size: 18px;
   color: #fff;
   font-weight: 600;
-  line-height: 38px;
+  line-height: 30px;
   max-width: 890px;
-  margin: 0 auto 50px;
+  margin: 0 auto 0;
 }
 .home_slider_btn .theme_btn {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 800;
-  padding: 21px 38px;
+  padding: 14px 25px;
+}
+.home_slider_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.home_slider_btn.active {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+  background: #000;
+  padding: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.home_slider_btn a.theme_btn {
+  margin: 10px;
 }
 
 .home-slider .slick-arrow {
@@ -244,21 +266,22 @@ header.main_header {
 
 .home-slider-main-tw {
   position: absolute;
-  top: 26%;
+  /* top: 26%; */
   left: 0;
   right: 0;
+  top: 48%;
 }
 .video_dilse_play-tw{
   position: relative;
 }
-.video_dilse_play-tw::before {
+/* .video_dilse_play-tw::before {
   content: '';
   position: absolute;
   top: 0;
   width: 100%;
   height: 100vh;
   background: rgb(0 0 0 / 62%);
-}
+} */
 
 .video_dilse_play-tw video {
   height: 100vh;
