--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -186,7 +186,7 @@ header.main_header {
 .hero_banner {
   padding: 186px 0 108px;
 }
-.home-slider-content {
+.video_dilse_play-tw .home-slider-content {
   text-align: center;
   max-width: 820px;
   margin: auto;
@@ -198,6 +198,10 @@ header.main_header {
   color: #fff;
   letter-spacing: 4px;
   margin-bottom: 6px;
+}
+.home-slider-content h1 {
+  text-align: center;
+  font-size: 32px !important;
 }
 .home-slider-content h1 {
   font-size: 34px;
@@ -774,4 +778,29 @@ section.sight_food_location {
   .gallery_crd_img img {
     width: 100%;
   }
+
+  /* 04-08-2023 */
+  .ds_content p {
+    font-size: 16px;
+    color: #716b6d;
+    line-height: 32px;
+    text-transform: lowercase;
+}
+.copyright_links ul {
+  display: flex;
+  align-items: end;
+  justify-content: end;
+}
+
+.copyright_links ul li {
+  margin-left: 20px;
+}
+
+.copyright_links ul li a {
+  font-size: 16px;
+  color: #716b6d;
+  display: block;
+  padding: 10px 0;
+  font-size: 16px;
+}
 
