--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -821,4 +821,56 @@ section.sight_food_location {
   color: #000;
   font-weight: 600;
 }
+/* ------------------
+    featured_posts
+--------------------- */
+.featured_posts {
+    padding: 80px 0 40px;
+  }
+  .featured_card {
+    background: #fff;
+    box-shadow: 0 3px 14px rgb(0 0 0 / 12%);
+    margin-bottom: 40px;
+  }
+  .post_img {
+    height: 316px;
+  }
+  .post_img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .post_txt h3 {
+    font-size: 18px;
+    color: #272729;
+    line-height: 35px;
+    margin-bottom: 8px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    position: relative;
+  }
+  .post_txt p {
+    line-height: 28px;
+    margin-bottom: 40px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    position: relative;
+  }
+  .post_btn a.theme_btn {
+    max-width: 235px;
+  }
+  .post_txt {
+    padding: 34px 32px;
+  }
+  /* ------------------
+      featured_posts
+  --------------------- */
+  .latest_posts {
+    background: #e5f5f4;
+    padding: 80px 0 80px;
+  }
 
