--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -1450,3 +1450,269 @@ img.mfp-img {
   .contact_form_btn {
     margin-top: 13px;
   }
+/*----------------
+   Cart Page Css
+-----------------------*/
+.shopping_cart .tittle_heading h2 {
+  text-align: left;
+}
+
+.shoping_main_top {
+  padding: 0 30px 0 0;
+}
+
+.shopping_items_main {
+  padding-bottom: 40px;
+  border-bottom: 1px solid #efefef;
+  margin-bottom: 40px;
+}
+
+.shoping_main_top .shopping_items_main:last-child {
+  margin-bottom: 0px;
+  border: none;
+}
+
+.shopping_items_main .shopping_items {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+/*----------------
+   Cart Page Css
+-----------------------*/
+.shopping_cart .tittle_heading h2 {
+    text-align: left;
+  }
+
+  .shoping_main_top {
+    padding: 0 30px 0 0;
+  }
+
+  .shopping_items_main {
+    padding-bottom: 40px;
+    border-bottom: 1px solid #efefef;
+    margin-bottom: 40px;
+  }
+
+  .shoping_main_top .shopping_items_main:last-child {
+    margin-bottom: 0px;
+    border: none;
+  }
+
+  .shopping_items_main .shopping_items {
+    display: flex;
+    justify-content: space-between;
+
+  }
+
+  .shopping_cart .tittle_heading {
+    margin-bottom: 80px;
+  }
+
+  .shoping_imge {
+    max-width: 130px;
+    height: 144px;
+  }
+
+  .shoping_imge img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+
+  .shopin_stock img {
+    width: 10px;
+    height: 10px;
+  }
+
+  .shoping_datas {
+    position: relative;
+    height: 100%;
+  }
+
+  .shopin_stock label {
+    margin-left: 7px;
+  }
+  .shoping_addon{
+   display: flex;
+    position: absolute;
+    bottom: 0px;
+  }
+  .shopin_stock {
+    display: flex;
+    align-items: center;
+    padding: 0px 5px;
+    border-radius: 20px;
+  }
+
+  .shoping_datas {
+    position: relative;
+  }
+
+  .shop_item_quantity {
+    width: 200px;
+  }
+
+  .shop_item_quantity #myform {
+    text-align: center;
+    padding: 5px;
+    border: 1px dotted #ccc;
+    margin: 2%;
+  }
+
+  .shop_item_quantity .qty {
+    width: 40px;
+    height: 25px;
+    text-align: center;
+  }
+
+
+  .shop_item_quantity input.qtyminus,
+  .shop_item_quantity input.qtyplus {
+    width: 25px;
+  }
+
+  .shop_item_quantity form#myform input {
+    height: 100%;
+    background: #fff;
+    border: 1px solid #000;
+    border-radius: 8px;
+  }
+
+  .shop_item_quantity #myform {
+    text-align: center;
+    padding: 5px;
+    border: 1px dotted #efefef;
+    margin: 2%;
+    display: flex;
+    justify-content: space-between;
+    width: 132px;
+    margin: auto;
+    padding: 0px;
+  }
+
+  .shope_price {
+    position: relative;
+    height: 100%;
+    width: 90px;
+  }
+
+  .shope_price .shope_p_tag {
+    border: 1px solid #eb0029;
+    padding: 4px 10px;
+    color: #eb0029;
+    font-weight: 700;
+    border-radius: 7px;
+    display: inline;
+  }
+
+  .remove_price {
+    /* position: absolute;
+    bottom: 0px; */
+    font-weight: 700;
+    position: absolute;
+      bottom: 0px;
+  }
+  .remove_price a {
+    padding: 5px 14px;
+  }
+  .order_summary .tittle_heading {
+    text-align: left;
+    margin-bottom: 40px;
+  }
+
+  .summary_main li {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #efefef;
+  }
+
+  .summary_main li:last-child {
+    margin-bottom: 0px;
+    border-bottom: 0px;
+  }
+
+  .summary_main .s_total p {
+    font-weight: 800;
+    margin-bottom: 0px;
+    color: #000;
+  }
+
+  .order_summary {
+    padding: 0 37px;
+    border-left: 1px solid #efefef;
+  }
+
+  .order_totalses p,
+  .order_totalse p {
+    font-size: 18px;
+    font-weight: 800;
+    color: #0b0708;
+
+  }
+
+  .order_totals {
+    margin-top: 20px;
+  }
+
+  .cart_btn input {
+    width: 100%;
+    font-size: 18px;
+    color: #fff;
+    padding: 8px;
+    font-weight: 600;
+    margin-top: 12px;
+    background: #0b0708;
+    border: 1px solid #0b0708;
+    text-align: center;
+    border-radius: 7px;
+
+  }
+
+  .product_checkout{
+    display: flex;
+    justify-content: space-between;
+  }
+  .product_checkout {
+    display: flex;
+    justify-content: space-between;
+  }
+  .product_img{
+    height: 150px;
+  }
+  .product_img img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  .product_cont {
+    padding: 10px 20px;
+  }
+  .product_cont p{
+    text-align: center;
+  }
+  .product_cont a.view_product p {
+    font-size: 15px;
+    color: #000;
+    font-weight: 700;
+    margin-bottom: 0px;
+  }
+  .product_box {
+    border: 1px solid #ccc;
+    border-radius: 14px;
+    flex: 0 0 15%;
+    overflow: hidden;
+  }
+  .product_c_main{
+    padding-top: 80px;
+
+  }
+  .product_c_main .tittle_heading{
+    text-align: left;
+    margin-bottom: 30px;
+  }
+  /* Checkout page css */
