--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -105,10 +105,11 @@ ul {
          header
 ------------------------ */
 header.main_header {
-  position: absolute;
-  left: 0;
+  /* position: absolute;
+  left: 0; */
   z-index: 1;
   width: 100%;
+  background-color: #000;
 }
 .top_header {
   padding: 10px 0;
@@ -151,6 +152,9 @@ header.main_header {
 
 .social_icons ul li a {
   display: inline-block;
+}
+.btm_header{
+  padding: 10px 0;
 }
 .btm_header_flx {
   display: flex;
@@ -232,7 +236,7 @@ header.main_header {
   justify-content: center;
 }
 .home_slider_btn.active {
-  position: fixed;
+  /* position: fixed;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -240,7 +244,7 @@ header.main_header {
   background: #000;
   padding: 10px;
   border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-bottom-right-radius: 10px; */
 }
 
 .home_slider_btn a.theme_btn {
@@ -273,7 +277,8 @@ header.main_header {
   /* top: 26%; */
   left: 0;
   right: 0;
-  top: 48%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .video_dilse_play-tw{
   position: relative;
