--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -1721,3 +1721,35 @@ img.mfp-img {
     margin-bottom: 30px;
   }
   /* Checkout page css */
+  .loader{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('//upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Phi_fenomeni.gif/50px-Phi_fenomeni.gif')
+                50% 50% no-repeat rgb(249,249,249);
+  }
+ .display{
+    display: none;
+
+  }
+
+  .menu_left.menu_right ul li a.cart_item {
+    position: relative;
+  }
+  .menu_left.menu_right ul li a.cart_item span {
+    position: absolute;
+    right: 18%;
+    top: 12%;
+    width: 15px;
+    height: 15px;
+    background-color: #fff;
+    font-size: 14px;
+    color: #000;
+    line-height: 15px;
+    border-radius: 50%;
+    text-align: center;
+  
+  }
