--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -1722,14 +1722,17 @@ img.mfp-img {
   }
   /* Checkout page css */
   .loader{
-    position: fixed;
+    background: url('https://i.ibb.co/Qfcc5jr/loader.gif')
+    50% 50% no-repeat rgb(249,249,249);
     left: 0px;
     top: 0px;
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url('//upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Phi_fenomeni.gif/50px-Phi_fenomeni.gif')
-                50% 50% no-repeat rgb(249,249,249);
+    /* position: fixed;
+
+
+ */
   }
  .display{
     display: none;
