--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -1445,7 +1445,7 @@ img.mfp-img {
   font-weight: 600;
 }
 
-.ds_content, .featured_posts, .contact_form_us, .inner_bannner {
+.ds_content, .featured_posts, .contact_form_us, .shopping_cart {
     border-bottom: 1px solid #dcd9da;
 }
 
