--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -2038,6 +2038,48 @@ product
 .contact_change_btn button.save_bttn {
     font-size: 16px;
 }
+
+span.required {
+    color: red;
+    font-weight: 700;
+    border: 0!important;
+    text-decoration: none;
+}
+
+.payment-metho-radio li {
+    padding: 10px 20px;
+    border: 1px solid hsl(0deg 0% 95%);
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.total-summary-list {
+    padding-left: 30px;
+    font-size: 14px;
+    text-align: left;
+    border-top: 1px dashed #c0c0c0;
+}
+.total-summary-list li {
+    margin: 1em 0;
+    overflow: hidden;
+}
+.total-summary-list li .key {
+    color: #333;
+    font-weight: 400;
+}
+.total-summary-list li .value {
+    float: right;
+    font-weight: 700;
+}
+.total-summary-list li.grand-total .value {
+    color: #FF5A60;
+}
+
+p {
+    margin-bottom: 15px;
+    color: #2F2F30;
+    line-height: 1.8;
+    font-size: 14px;
+}
 /*.menu_main_box .best_food_crd{*/
 /*    position: relative;*/
 /*}*/
