--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -331,6 +331,7 @@ header.main_header {
     text-align: center;
     display: block;
     margin: auto;
+    width:100%;
 }
 
 .CustomPagination ul.pagination li.page-item.active span{
@@ -2060,7 +2061,6 @@ span.required {
 }
 .total-summary-list li {
     margin: 1em 0;
-    overflow: hidden;
 }
 .total-summary-list li .key {
     color: #333;
@@ -2222,3 +2222,14 @@ box-shadow: 3px 3px 5px #eb0029 !important;
     font-size: 17px;
     text-align: left;
 }
+input.InputElement.is-empty.Input.Input--empty {
+    font-size:24px;
+    padding-bottom: 2px;
+}
+iframe {
+    height: 33.8px!important;
+}
+/* .InputContainer .InputElement {
+    position: absolute;
+    top: 15px;
+} */
