stripe payment page

--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -2276,6 +2276,7 @@ box-shadow: 3px 3px 5px #eb0029 !important;
 
 .menu_list_inner1:last-child {
     margin-bottom: 0px;
+}
 /***********thank you page **********/
 .thank-you-container {
     max-width: 838px;
