--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -2277,8 +2277,31 @@ box-shadow: 3px 3px 5px #eb0029 !important;
 .menu_list_inner1:last-child {
     margin-bottom: 0px;
 }
+
+ .orders-table-wrapper{
+    /*border-radius: 4px;*/
+    padding: 1rem;
+    margin-bottom: 2rem;
+    border: none;
+}
+.orders-table thead {
+    background: red;
+}
+.profile-info-form small {
+    color: #FF5A60;
+    font-size: 12px;
+}wap-order .order-head span{
+     color: #55a2a6;
+ }
+
+
+.orders-table thead {
+    background: rgb(255,0,0);
+    color: #fff;
+}
+
 /***********thank you page **********/
-.thank-you-container { 
+.thank-you-container {
     max-width: 838px;
     margin: 50px auto;
     padding: 40px;
@@ -2311,3 +2334,5 @@ box-shadow: 3px 3px 5px #eb0029 !important;
 .thank-you-container td img {
     width: 92px;
 }
+
+
