--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -930,14 +930,14 @@ section.sight_food_location {
 
 
 .gallery_crd_img {
-    a {
-        display:inline-block;
-        width:25%;
-        img {
-            height:auto;
-            width:100%;
-        }
-    }
+a {
+    display:inline-block;
+    width:25%;
+img {
+    height:auto;
+    width:100%;
+}
+}
 }
 
 @import url('https://fonts.googleapis.com/css?family=Abel');
@@ -1827,56 +1827,56 @@ product
     padding: 15px;
 }
 .add-to-cart-button {
-    &:active {
-        -webkit-box-shadow: 0 0 0 0.2rem rgba(252, 186, 3,.45);
-        box-shadow: 0 0 0 0.2rem rgba(252, 186, 3,.45);
-        -webkit-transform: translateY(4px);
-        transform: translateY(4px);
-    }
+&:active {
+     -webkit-box-shadow: 0 0 0 0.2rem rgba(252, 186, 3,.45);
+     box-shadow: 0 0 0 0.2rem rgba(252, 186, 3,.45);
+     -webkit-transform: translateY(4px);
+     transform: translateY(4px);
+ }
 
-    &:hover {
-        cursor: pointer;
-    }
+&:hover {
+     cursor: pointer;
+ }
 
-    &:hover,
-    &:focus {
-        -webkit-box-shadow: 0 0 0 0.2rem rgba(252, 186, 3,.45);
-        box-shadow: 0 0 0 0.2rem rgba(252, 186, 3,.45);
-        -webkit-transform: translateY(-1px);
-        transform: translateY(-1px);
-    }
+&:hover,
+&:focus {
+     -webkit-box-shadow: 0 0 0 0.2rem rgba(252, 186, 3,.45);
+     box-shadow: 0 0 0 0.2rem rgba(252, 186, 3,.45);
+     -webkit-transform: translateY(-1px);
+     transform: translateY(-1px);
+ }
 
-    &.added {
-        background: #eb0029;
-        -webkit-box-shadow: 0 0 0 0.2rem rgba(11, 252, 3, 0.45);
-        box-shadow: 0 0 0 0.2rem rgb(255 45 45 / 31%);
+&.added {
+     background: #eb0029;
+     -webkit-box-shadow: 0 0 0 0.2rem rgba(11, 252, 3, 0.45);
+     box-shadow: 0 0 0 0.2rem rgb(255 45 45 / 31%);
 
-        .add-to-cart {
-            display: none;
-        }
+.add-to-cart {
+    display: none;
+}
 
-        .added-to-cart {
-            display: block;
-        }
+.added-to-cart {
+    display: block;
+}
 
-        .cart-icon {
-            animation: drop 0.3s forwards;
-            -webkit-animation: drop 0.3s forwards;
-            animation-delay: 0.18s;
-        }
+.cart-icon {
+    animation: drop 0.3s forwards;
+    -webkit-animation: drop 0.3s forwards;
+    animation-delay: 0.18s;
+}
 
-        .box-1,
-        .box-2 {
-            top: 18px;
-        }
+.box-1,
+.box-2 {
+    top: 18px;
+}
 
-        .tick {
-            animation: grow 0.6s forwards;
-            -webkit-animation: grow 0.6s forwards;
-            animation-delay: 0.7s;
-        }
+.tick {
+    animation: grow 0.6s forwards;
+    -webkit-animation: grow 0.6s forwards;
+    animation-delay: 0.7s;
+}
 
-    }
+}
 
 }
 
@@ -2139,91 +2139,12 @@ p {
     height: 200px;
 }
 
-/*Stripe css*/
-#card-element form {
-    width: 480px;
-    margin: 20px 0;
-}
-
-#card-element .group {
-    margin-bottom: 20px;
-}
-
-#card-element label {
-    position: relative;
-    color: #8898AA;
-    font-weight: 300;
-    height: 40px;
-    line-height: 40px;
-    margin-left: 20px;
-    display: flex;
-    flex-direction: row;
-}
-
-#card-element .group label:not(:last-child) {
-    border-bottom: 1px solid #F0F5FA;
-}
-
-#card-element label > span {
-    width: 120px;
-    margin-right: 30px;
-}
-
-#card-element label > span.brand {
-    width: 30px;
-}
-
-#card-element .field {
-    font-weight: 300;
-    border: 0;
-    outline: none;
-    flex: 1;
-    padding-right: 10px;
-    padding-left: 10px;
-    cursor: text;
-}
-
-#card-element .field::-webkit-input-placeholder {
-    color: #CFD7E0;
-}
-
-#card-element .field::-moz-placeholder {
-    color: #CFD7E0;
-}
-
-
-.outcome {
-    float: left;
-    width: 100%;
-    padding-top: 8px;
-    min-height: 24px;
-    text-align: center;
-}
-
-.success,
-{
-    display: none;
-    font-size: 13px;
-}
-
-.success.visible,
-.error.visible {
-    display: inline;
-}
-
-.error {
-    color: #E4584C;
-}
-
-.success {
-    color: #666EE8;
-    display: none;
-}
-
-.success .token {
-    font-weight: 500;
-    font-size: 13px;
-}
+/*.menu_main_box .best_food_crd{*/
+/*    position: relative;*/
+/*}*/
+/*.menu_main_box {*/
+/*    position: relative;*/
+/*}*/
 
 /* 16-8-23 */
 a.qtyminus.minus.qty-count.qty-count--minus.update-qty,a.qty-plus.plus.qty-count.qty-count--add.update-qty {
@@ -2256,7 +2177,7 @@ a.qtyminus.minus.qty-count.qty-count--minus.update-qty,a.qty-plus.plus.qty-count
     color: #000 !important;
 }
 .product_c_main ul#myTab .nav-link:hover {
-box-shadow: 3px 3px 5px #eb0029 !important;
+    box-shadow: 3px 3px 5px #eb0029 !important;
 }
 .product_c_main ul#myTab .nav-link:hover {
     box-shadow: 1px 1px 16px 3px #f3bac4 !important;
@@ -2296,10 +2217,10 @@ box-shadow: 3px 3px 5px #eb0029 !important;
 }
 
 .btn-close {
-   background-image: url("../img/cross_popup.png") !important;
-   background-size: cover;
-   opacity: 1;
-   background-position: right top;
+    background-image: url("../img/cross_popup.png") !important;
+    background-size: cover;
+    opacity: 1;
+    background-position: right top;
 }
 
 .video_dilse-tw .modal-dialog {
@@ -2381,7 +2302,7 @@ box-shadow: 3px 3px 5px #eb0029 !important;
     margin-bottom: 0px;
 }
 
- .orders-table-wrapper{
+.orders-table-wrapper{
     /*border-radius: 4px;*/
     padding: 1rem;
     margin-bottom: 2rem;
@@ -2445,7 +2366,7 @@ box-shadow: 3px 3px 5px #eb0029 !important;
     color: #000;
 }
 .right_text {
-      position: absolute;
+    position: absolute;
     right: 0px;
     top: 92px;
 }
@@ -2530,9 +2451,6 @@ button.inline-flex {
     padding: 11px 38px;
     width: 100%;
 }
- .product_box {
-    padding: 0 15px;
-}
 
 li.admin_logot > a {
     background: #d90d0d;
@@ -2543,7 +2461,7 @@ li.admin_logot > a {
 }
 
 .logout  {
-position: absolute;
+    position: absolute;
 }
 /* .logout a {
     background: #fff !important;
