--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -2462,7 +2462,7 @@ li.logout {
 .custn_input {
     position: relative;
 }
-.custn_input i.fa-solid.user_pass.fa-eye,
+.custn_input i.fa-solid.toggle-password.fa-eye,
 .custn_input i.fa-solid.fa-eye.confirm_pass {
     position: absolute;
     top: 0;
@@ -2471,7 +2471,7 @@ li.logout {
     bottom: 0;
 }
 
-.custn_input i.fa-solid.user_pass.fa-eye-slash,
+.custn_input i.fa-solid.toggle-password.fa-eye-slash,
 .custn_input i.fa-solid.confirm_pass.fa-eye-slash {
     position: absolute;
     top: 68%;
@@ -2595,4 +2595,54 @@ nav {
 
 ul.dropdown-menu.show li a {
     color: #000;
+}
+a.checkout_link_guest {
+    text-align: center;
+}
+
+/* Register and login  page css */
+.pass_show{position: relative}
+
+.pass_show .ptxt {
+
+    position: absolute;
+
+    top: 50%;
+
+    right: 10px;
+
+    z-index: 1;
+
+
+    margin-top: -10px;
+
+    cursor: pointer;
+
+    transition: .3s ease all;
+
+}
+
+
+
+.no-order-message {
+    font-size: 1.5rem;
+    color: #555;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.back-to-home {
+    margin-top: 30px;
+    text-align: -webkit-center;
+}
+
+.back-to-home a {
+    text-decoration: none;
+    color: #3498db;
+    font-weight: bold;
+    transition: color 0.2s;
+}
+
+.back-to-home a:hover {
+    color: #2980b9;
 }
