--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -2797,3 +2797,15 @@ section.menu_main1 .cusstom_input input, .cusstom_input select{
     background: #000 !important;
     border: 1px solid #eb0029;
 }
+.post_btn a {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    font-weight: 900;
+    padding: 8px 38px;
+    background: #eb0029;
+    border: 1px solid #eb0029;
+    text-align: center;
+    border-radius: 7px;
+    transition: all 0.3s;
+}
