--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -923,16 +923,16 @@ section.sight_food_location {
     padding: 80px 0 80px;
 }
 
-.gallery_crd_img {
-a {
-    display: inline-block;
-    width: 25%;
-img {
-    height: auto;
-    width: 100%;
-}
-}
-}
+/*.gallery_crd_img {*/
+/*a {*/
+/*    display: inline-block;*/
+/*    width: 25%;*/
+/*img {*/
+/*    height: auto;*/
+/*    width: 100%;*/
+/*}*/
+/*}*/
+/*}*/
 
 @import url("https://fonts.googleapis.com/css?family=Abel");
 h1 {
