--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -3403,3 +3403,20 @@ iframe {
 .about_img img {
     border-radius: 60px;
 }
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+#delivery-options {
+    margin-top: 20px;
+}
+
+label {
+    display: inline-block;
+    margin-right: 10px;
+}
