--- a/public/frontend/css/mediaQuery-css.css
+++ b/public/frontend/css/mediaQuery-css.css
@@ -56,16 +56,28 @@
     visibility: visible;
     transition: 500ms ease-in all;
   }/*# sourceMappingURL=index.css.map */
-
+  .responsi_header {
+    display: none;
+}
   @media screen and (max-width: 991px) {
+    header.main_header{
+        display: none;
+    }
+    header.responsi_header{
+        display: block;
+    }
     .py_8,
     .contact_sec {
       padding: 70px 0px;
+    }
+    .top_header {
+        display: none;
     }
     .tittle_heading h2,
     .sub_scribe_txt h2 {
       font-size: 32px;
     }
+   
     .available_on_txt h5 {
       font-size: 24px;
     }
@@ -134,6 +146,7 @@
       font-size: 32px;
       line-height: 44px;
     }
+
   }
   @media screen and (max-width: 767px) {
     .py_8,
@@ -364,4 +377,13 @@
     .restudent_text h2 {
       font-size: 18px;
     }
+  }
+  @media screen and (max-width: 375px) {
+    .tittle_heading h2, .sub_scribe_txt h2 {
+        font-size: 15px;
+        line-height: 29px;
+    }
+    .responsi_header .menu_right {
+           width: 300px;
+          }
   }
